--- a/web/index.html
+++ b/web/index.html
@@ -61,5 +61,28 @@
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
   </script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyAlkqhHQyMsS9GhitXTkYup33_fJuuVKEo",
+      authDomain: "itschedule.firebaseapp.com",
+      projectId: "itschedule",
+      storageBucket: "itschedule.appspot.com",
+      messagingSenderId: "647916935531",
+      appId: "1:647916935531:web:c198a573c9b0019b9c142e",
+      measurementId: "G-FLRSD3J8FK"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 </html>
